Feature: Auth Implementation with Login, Registration

--- a/SmartHomes.Services.Soap/appsettings.json
+++ b/SmartHomes.Services.Soap/appsettings.json
@@ -14,5 +14,9 @@
   },
   "SoapService": {
     "Url": "http://localhost:5001"
+  },
+  "Jwt": {
+    "Secret": "zGOhnLACeFOmnBEyAGNB9IKUcvjDquzf",
+    "ExpirationMinutes": 60
   }
 }
