--- a/SmartHomes.API.Rest/SmartHomes.API.Rest.csproj
+++ b/SmartHomes.API.Rest/SmartHomes.API.Rest.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="System.ServiceModel.Http" Version="8.1.1" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="8.1.1" />
