Save: Estado funcional antes de Azure

--- a/SmartHomes.API.Rest/appsettings.json
+++ b/SmartHomes.API.Rest/appsettings.json
@@ -11,5 +11,8 @@
   },
   "OpenWeather": {
     "ApiKey": "d80ffaee2cee46bf65d80759cbb39afe"
+  },
+  "Jwt": {
+    "Secret": "zGOhnLACeFOmnBEyAGNB9IKUcvjDquzf"
   }
 }
