--- a/SmartHomes.API.Rest/appsettings.json
+++ b/SmartHomes.API.Rest/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "SoapService": {
-    "Url": "http://localhost:5001"
+    "Url": "https://smarthomesservicessoap-c9ezdeb5caedeagz.francecentral-01.azurewebsites.net/"
   },
   "OpenWeather": {
     "ApiKey": "d80ffaee2cee46bf65d80759cbb39afe"
