--- a/SmartHomes.Services.Soap/SmartHomes.Services.Soap.csproj
+++ b/SmartHomes.Services.Soap/SmartHomes.Services.Soap.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\SmartHomes.Infrastructure\SmartHomes.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
